fixed misaligned category page description

--- a/app/assets/stylesheets/partials/_ecommerce.css.scss
+++ b/app/assets/stylesheets/partials/_ecommerce.css.scss
@@ -1149,7 +1149,7 @@
       font-size: 14px !important;     
       font-weight: 300 !important;
       color: #333 !important;
-      margin: 20px 0 0 0;
+      margin: 20px auto 0 auto;
     }
   }
   .results-sort {
